# atra

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  COPYRIGHT  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  build.rs  ideas  logo.txt  todos
.cargo/: config.toml
atra/: Cargo.toml  build.rs  notes_chromium.txt
atra-macros/: Cargo.toml
atra/data/gdbr/de/: svm.csv
atra/src/: application.rs  args.rs  client.rs  consumer.rs  data_holder.rs  data_processing.rs  database_error.rs  depth.rs  header_map_extensions.rs  html.rs  language_detection.rs  link_state.rs  logging.rs  main.rs  response.rs  rocksdb_ext.rs  seed_provider.rs  util.rs  util_selectors.rs  web_graph.rs
atra/src/app/: args.rs  atra.rs  config.rs  constants.rs  consumer.rs  dump.rs  errors.rs  exitcode_conversions.rs  logging.rs  logo_small.txt  mod.rs  terminal.rs  view.rs  welcome.txt
atra/src/app/context/: error.rs  mod.rs  traits.rs
atra/src/app/instruction/: error.rs  instruction.rs  mod.rs
atra/src/app/rest/: mod.rs
atra/src/app/view/: db_view.rs
atra/src/blacklist/: lists.rs  manage.rs  manager.rs  mod.rs  traits.rs
atra/src/blacklist/manager/: manager_impl.rs  mod.rs
atra/src/budget/: budget.rs  manager.rs  mod.rs
atra/src/client/: classic.rs  mod.rs  traits.rs
atra/src/client/impls/: mod.rs
atra/src/config/: configs.rs  crawl.rs  mod.rs  paths.rs  session.rs  system.rs
atra/src/contexts/: context.rs  errors.rs  inmemory.rs  local.rs  mod.rs  worker_context.rs
atra/src/contexts/helper/: mod.rs  polling.rs
atra/src/contexts/local/: context.rs  errors.rs  mod.rs
atra/src/contexts/worker/: context.rs  error.rs  mod.rs
atra/src/cookies/: cookies.rs  manager.rs  mod.rs
atra/src/crawl/: crawler.rs  db.rs  errors.rs  intervals.rs  mod.rs  result.rs  seed.rs  slim.rs  website_crawler.rs
atra/src/crawl/crawler/: intervals.rs  result.rs  sitemaps.rs  slim.rs
atra/src/data/: decoded.rs  mod.rs  processing.rs  raw.rs
atra/src/database/: database_error.rs  mod.rs  options.rs  rocksdb_ext.rs
atra/src/decoding/: data_holder.rs  mod.rs
atra/src/extraction/: archive_decoding.rs  deflate.rs  errors.rs  extractor.rs  extractor_method.rs  html.rs  js.rs  links.rs  marker.rs  mod.rs  raw.rs
atra/src/extraction/extractor/: apply_when.rs  command.rs  data_holder.rs  mod.rs  result.rs
atra/src/fetching/: mod.rs  requests.rs  response.rs
atra/src/format/: file_content.rs  file_format_detection.rs  information.rs  mime.rs  mime_ext.rs  mime_serialize.rs  mod.rs  supported.rs
atra/src/gdbr/: identifier.rs  mod.rs  scraper_ext.rs
atra/src/io/: errors.rs  file_owner.rs  fs.rs  mod.rs  serial.rs  simple_line.rs  templating.rs  unique_path_provider.rs
atra/src/io/templating/: args.rs  elements.rs  errors.rs  mod.rs  recovery.rs  template.rs
atra/src/link_state/: db.rs  errors.rs  kind.rs  manager.rs  mod.rs  state.rs  traits.rs
atra/src/link_state/state/: in_memory.rs  mod.rs  raw.rs  traits.rs
atra/src/origin/: entry.rs  errors.rs  guard.rs  manager.rs  mod.rs
atra/src/origin/managers/: in_memory.rs
atra/src/queue/: errors.rs  file.rs  file_typed.rs  mod.rs  traits.rs
atra/src/queue/polling/: result.rs
atra/src/queue/raw/: errors.rs  implementation.rs  mod.rs
atra/src/queue/url/: element.rs  mod.rs  poll.rs  queue.rs  refs.rs  result.rs
atra/src/recovery/: mod.rs
atra/src/recrawl_management/: mod.rs
atra/src/robots/: cached.rs  error.rs  information.rs  manager.rs  manager_impl.rs  mod.rs
atra/src/runtime/: atra_runtime.rs  context.rs  mod.rs  shutdown.rs
atra/src/samples/: HTML attribute reference - HTML_ HyperText Markup Language _ MDN.html  sample_1.html  sample_4.html
atra/src/seed/: error.rs  guarded.rs  mod.rs  unguarded.rs
atra/src/seed/input/: lines.rs  mod.rs  seed_data.rs
atra/src/seeds/: mod.rs  seed_definition.rs  seed_reader.rs
atra/src/sitemaps/: entries.rs  parse.rs
atra/src/stores/: mod.rs  warc.rs
atra/src/sync/: barrier.rs  mod.rs
atra/src/test_impls/: consumer.rs  fake_client.rs  inmemory.rs  mod.rs  providers.rs
atra/src/toolkit/: case_insensitive_str.rs  digest.rs  domains.rs  dropping.rs  extension_extractor.rs  generic_cursor.rs  header_map_extensions.rs  in_memory_domain_manager.rs  isolang_ext.rs  language_detection.rs  limited_buffer.rs  mod.rs  selectors.rs  serde_ext.rs  utf8.rs
atra/src/url/: atra_uri.rs  cleaner.rs  depth.rs  guarded.rs  mod.rs  origin.rs  queue.rs  url_with_depth.rs
atra/src/url/guard/: entry.rs  errors.rs  guard.rs  mod.rs  traits.rs
atra/src/url/queue/: element.rs
atra/src/warc/: mod.rs  writer.rs
atra/src/warc_ext/: errors.rs  instructions.rs  mod.rs  read.rs  skip_pointer.rs  special_writer.rs  write.rs
atra/src/worker/: mod.rs
atra/testdata/: blacklist.txt
atra/testdata/configs/: config.json
atra/testdata/configs/sub/: config.json
atra/testdata/samples/: Amazon.html
docker/: Dockerfile
iso_stopwords/: .gitignore  Cargo.toml  build.rs
iso_stopwords/src/: lib.rs
src/: application.rs  args.rs  logging.rs  main.rs  util.rs
src/core/: data_holder.rs  data_processing.rs  database_error.rs  depth.rs  digest.rs  file_format_inference.rs  header_map_extensions.rs  ini_ext.rs  isolang_ext.rs  language_detection.rs  link_state.rs  mime.rs  mod.rs  page_processing.rs  page_type.rs  page_writers.rs  response.rs  rocksdb_ext.rs  seed_provider.rs  serde_util.rs  shutdown.rs  stores.rs  system.rs  toolkit.rs  util_selectors.rs  web_graph.rs
src/features/: csv.rs  gdbr_identifiert.rs  html_tags.rs  mod.rs  scraper_ext.rs  simple_test_data.rs  stopwords.rs
src/nom_ext/: mod.rs  simple_operators.rs
src/warc/: field.rs  header.rs  media_type.rs  (+6 more)
svm/: Cargo.toml
svm/src/: classifier.rs  config.rs  csv2.rs  error.rs  lib.rs  toolkit.rs
testdata/: testdata.bin.reade.txt
text_processing/: Cargo.toml
text_processing/src/: configs.rs  corpus.rs  lib.rs  stopword_registry.rs  tf_idf.rs  tokenizer.rs  vectorizer.rs
warc/: Cargo.toml
warc/src/: field.rs  header.rs  lib.rs  media_type.rs  parser.rs  reader.rs  record_type.rs  states.rs  truncated_reason.rs  writer.rs
(+123 files in other folders)
