[workspace]
members = ["atra", "iso_stopwords", "text_processing", "svm", "warc"]
resolver = "2"

[workspace.dependencies]
# Workspace members
iso_stopwords = { path = "iso_stopwords" }
warc = { path = "warc" }
text_processing = {path = "text_processing"}
svm = {path = "svm"}

# Externals
mupdf = { path= "external/mupdf" }
liblinear = { path= "external/liblinear/crates/liblinear" }
file-format = { git = "https://github.com/FelixEngl/file-format.git", branch = "main" }

# Default versions for shared libs
isolang = "2.4"
encoding_rs = "0.8"
strum =  "0.26"
thiserror = "1.0"
ubyte = "0.10"
itertools = "0.13"
paste = "1"
serde = "1"
time = "0.3"
memchr = "2"
nom = "7"
const_format = "0"
mime = "0.3"
compact_str = "0.8"
unescaper = "0.1"
rust-stemmers = "1"
unicode-normalization = "0.1"
unicode-segmentation = "1.11"
camino = "1.1"
camino-tempfile = "1.1"
log = "0.4"
float-cmp = "0.9"
delegate = "0"
bincode = "1.3"
serde_json = "1.0"