[workspace]
members = ["atra", "iso_stopwords", "text_processing", "svm", "warc"]
resolver = "2"

[workspace.dependencies]
# Workspace members
iso_stopwords = { path = "iso_stopwords" }
warc = { path = "warc" }
text_processing = {path = "text_processing"}
svm = {path = "svm"}

# Externals
mupdf = { path= "external/mupdf" }
liblinear = { path= "external/liblinear/crates/liblinear" }
file-format = { git = "https://github.com/FelixEngl/file-format.git", branch = "main" }

# Default versions for shared libs
isolang = "2.4"
encoding_rs = "0.8"
strum =  "0.26"
thiserror = "1.0"
ubyte = "0.10"
itertools = "0.13"
paste = "1"
serde = "1"
time = "0.3"
memchr = "2"
nom = "7"
const_format = "0"
mime = "0.3"
compact_str = "0.8"
unescaper = "0.1"
rust-stemmers = "1"
unicode-normalization = "0.1"
unicode-segmentation = "1.11"
camino = "1.1"
camino-tempfile = "1.1"
log = "0.4"
float-cmp = "0.9"
delegate = "0"
bincode = "1.3"
serde_json = "1.0"
config = "0.14"
case_insensitive_string = "0.2"
reqwest = "0.12"
smallvec = "1.13"
enum-iterator = "2"
url = "2"
psl = "2"
num_enum = "0.7"
tokio = "1.40"
chardetng = "0.1"
rand = "0.8"
regex = "1.10"
byteorder = "1"
bytes = "1"
anyhow = "1"
