[package]
name = "svm"
version = "0.1.0"
edition = "2021"

[dependencies]
isolang.workspace = true
serde = {workspace = true, features = ["serde_derive"]}
liblinear.workspace = true
text_processing.workspace = true
camino = {workspace = true, features = ["serde1"]}
itertools.workspace = true
rust-stemmers.workspace = true
thiserror.workspace = true
camino-tempfile.workspace = true
log.workspace = true
csv = "1.3"
bincode.workspace = true
serde_json.workspace = true
float-cmp.workspace = true